--- a/src/components/common/Modal/styles.scss
+++ b/src/components/common/Modal/styles.scss
@@ -5,6 +5,7 @@
     right: 0;
     position: fixed;
     background-color: rgba(0, 0, 0, .2);
+    backdrop-filter: blur(2px);
 }
 
 .modal.visually-hidden {
@@ -18,8 +19,6 @@
 .modal__overflow{
     width: 100vw;
     height: 100vh;
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .modal__content{
