--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,18 @@
 * {
   transition: background .2s ease;
+  box-sizing: border-box;
+}
+
+$size: 8px;
+
+.app {
+  margin: 0 auto;
+  max-width: 1000px;
+  // display: grid;
+  // grid-template-rows: 50px 1fr 100px;
+  display: flex;
+  flex-direction: column;
+  gap: $size * 2;
+  height: 100%;
+
 }
