--- a/src/components/Category/styles.scss
+++ b/src/components/Category/styles.scss
@@ -1,8 +1,17 @@
-.list-item {
-    font-weight: normal;
-    cursor: pointer;
+@import '../../App.scss';
+
+.category-list {
+    padding-left: $size * 3;
+    list-style-type: none;
 }
 
-.list-item.active {
+.category-list__item {
+    display: block;
+    font-weight: normal;
+    cursor: pointer;
+    margin-top: $size;
+}
+
+.category-list__item.active {
     font-weight: bold;
 }
