styling todo item

--- a/src/components/common/Modal/styles.scss
+++ b/src/components/common/Modal/styles.scss
@@ -6,6 +6,7 @@
     position: fixed;
     background-color: rgba(0, 0, 0, .2);
     backdrop-filter: blur(2px);
+    z-index: 1;
 }
 
 .modal.visually-hidden {
