--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,19 @@
+$size: 8px;
+
 * {
   transition: background .2s ease;
   box-sizing: border-box;
 }
 
-$size: 8px;
 
 .app {
-  margin: 0 auto;
   max-width: 1000px;
-  // display: grid;
-  // grid-template-rows: 50px 1fr 100px;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
+  margin: 0 auto;
+  padding: $size * 2;
   display: flex;
   flex-direction: column;
   gap: $size * 2;
-  height: 100%;
-
 }
