--- a/src/components/common/TodoItem/styles.scss
+++ b/src/components/common/TodoItem/styles.scss
@@ -8,6 +8,10 @@
     z-index: 0;
 }
 
+.todo-item__footer {
+    margin-top: $size * 2;
+}
+
 .todo-item__title {
     width: 80%;
     display: flex;
