--- a/src/components/Categories/CategoryControl/styles.scss
+++ b/src/components/Categories/CategoryControl/styles.scss
@@ -13,6 +13,7 @@
         display: flex;
         align-items: center;
         gap: $size * 4;
+        grid-area: control;
     }
     .category-control__progress {
         order: 3;
