--- a/src/components/common/Confirm/styles.module.scss
+++ b/src/components/common/Confirm/styles.module.scss
@@ -1,6 +1,6 @@
 @import '../../../App.scss';
 
-.confirm-buttons {
+.confirmButtons {
     display: flex;
     justify-content: space-around;
     margin-top: $size * 3;
