--- a/src/components/TodoItems/styles.module.scss
+++ b/src/components/TodoItems/styles.module.scss
@@ -25,6 +25,7 @@
         display: flex;
         align-items: center;
         gap: $size * 2;
+        flex-wrap: wrap;
     }
 
     .todoItemsHeader > *:not(*:last-child) {
