--- a/src/components/TodoItems/styles.module.scss
+++ b/src/components/TodoItems/styles.module.scss
@@ -2,10 +2,11 @@
 
 .todoItems {
     flex-grow: 1;
+    padding: $size * 2;
 }
 
 .todoItemsHeader {
-    padding: $size * 2;
+    margin-bottom: $size * 2;
 }
 
 .todoItemsHeader > *:not(*:last-child) {
@@ -14,7 +15,6 @@
 
 .todoItemsContent {
     transition: height .3s ease-in;
-    padding: $size * 2;
     display: flex;
     flex-direction: column;
     gap: $size * 2;
