--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,8 @@
 * {
   transition: background .2s ease;
   box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -13,7 +15,4 @@
   height: 100%;
   margin: 0 auto;
   padding: $size * 2;
-  display: flex;
-  flex-direction: column;
-  gap: $size * 2;
 }
