--- a/src/components/base/Header/styles.module.scss
+++ b/src/components/base/Header/styles.module.scss
@@ -1,13 +1,13 @@
 @import '../../../variables';
+@import '../../../mixins.scss';
 
 .header {
-    display: flex;
+    @include flex(2);
     justify-content: space-between;
-    align-items: center;
     padding: $size * 2;
+    margin-bottom: $size * 2;
 }
 
 .headerLogo {
-    display: flex;
-    align-items: center;
+    @include flex(2);
 }
