--- a/src/components/common/Form/styles.module.scss
+++ b/src/components/common/Form/styles.module.scss
@@ -5,9 +5,13 @@
     width: 300px;
 }
 
+.form * {
+    overflow-x: visible;
+}
+
 .formFields {
     margin-top: $size * 5;
     display: flex;
-    flex-direction: column;
     gap: $size * 4;
+    flex-direction: column;
 }
