--- a/src/components/common/TodoItem/styles.module.scss
+++ b/src/components/common/TodoItem/styles.module.scss
@@ -1,4 +1,5 @@
-@import '../../../variables';;
+@import '../../../variables';
+@import '../../../mixins.scss';
 
 .todoItems {
     display: flex;
@@ -6,15 +7,12 @@
 }
 
 .todoItemHeader {
-    display: flex;
-    align-items: center;
+    @include flex(0);
     justify-content: space-between;
     margin-bottom: $size;
-    z-index: 0;
 }
 
 .todoItemContent {
-    height: 4em;
     flex-grow: 1;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
@@ -36,9 +34,5 @@
 
 .todoItemTitle {
     width: 80%;
-    display: flex;
-    align-items: center;
-    gap: $size;
+    @include flex(1);
 }
-
-@media screen and (min-width: 700px) {}
