--- a/src/components/common/TodoItem/styles.module.scss
+++ b/src/components/common/TodoItem/styles.module.scss
@@ -12,6 +12,21 @@
     margin-bottom: $size;
 }
 
+.todoItemTitleText {
+    -ms-text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -ms-line-clamp: 1;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    display: -webkit-box;
+    display: box;
+    word-wrap: break-word;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+}
+
 .todoItemContent {
     flex-grow: 1;
     -ms-text-overflow: ellipsis;
